--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,5 @@
+apply from:"./stone-repo.gradle"
+
 buildscript {
   // Buildscript is evaluated before everything else so we can't use getExtOrDefault
   def kotlin_version = rootProject.ext.has("kotlinVersion") ? rootProject.ext.get("kotlinVersion") : project.properties["StonePosDeeplink_kotlinVersion"]
@@ -82,6 +84,7 @@ repositories {
   google()
 }
 
+def stone_sdk_version = "4.8.2"
 def kotlin_version = getExtOrDefault("kotlinVersion")
 
 dependencies {
@@ -90,5 +93,12 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  
+  implementation "br.com.stone:stone-sdk:$stone_sdk_version"
+  implementation "br.com.stone:stone-sdk-posandroid:$stone_sdk_version"
+  implementation "br.com.stone:stone-sdk-posandroid-positivo:$stone_sdk_version"
+
+  debugImplementation "com.github.tony19:logback-android:2.0.0"
+  debugImplementation "br.com.stone.sdk.android:debugmode:4.0.3"
 }
 
